# traccar-microservices_v1

./: docker-compose.yml
MSDispositivos/: .env  ActualizarAcumuladores.c  ActualizarAcumuladores.h  ActualizarConductor.c  ActualizarConductor.h  ActualizarDispositivo.c  ActualizarDispositivo.h  CMakeLists.txt  ConversorJSONDispositivos.c  ConversorJSONDispositivos.h  Dockerfile  EliminarConductor.c  EliminarConductor.h  EliminarDispositivo.c  EliminarDispositivo.h  GuardarConductor.c  GuardarConductor.h  GuardarDispositivo.c  GuardarDispositivo.h  ManejadorDeIMG.c  ManejadorDeIMG.h  ObteDisConUni.c  ObteDisConUni.h  ObtenerCondiciConductores.c  ObtenerCondiciConductores.h  ObtenerCondiciUniConductores.c  ObtenerCondiciUniConductores.h  ObtenerTodosConductores.c  ObtenerTodosConductores.h  apiAutomatizadaP.sh  benchmark.cpp  benchmark.h  conexionPostrgrest.c  main.cpp  metrics_logger.cpp  metrics_logger.h  obtdisall.c  obtdisall.h  obtenerDispositivosCondicion.c  obtenerDispositivosCondicion.h  (+2 more)
MSEventos/: CMakeLists.txt  Dockerfile  main.cpp
MSNotificaciones/: CMakeLists.txt  Dockerfile  config.json  main.cc  main.cpp  notificaciones.sh
MSNotificaciones/test/: CMakeLists.txt
MSPosicion/: CMakeLists.txt  DatabaseConnection.cpp  DatabaseConnection.h  Dockerfile  HTTP Request.jmx  Position.cpp  Position.h  PositionController.cpp  PositionController.h  config.json  main.cpp  positions.sh
MSReportes/: CMakeLists.txt  Dockerfile  main.cpp
MSUsuarios/: CMakeLists.txt  Dockerfile  UsrDocker.cpp  UsrServiceApp  UsrServiceApp.cpp  UsuariosServiceApplication  UsuariosServiceApplication.cpp  jwt_funciones.c  jwt_funciones.h  main.cpp  main2.cpp  prueba_usuarios.sh
MSUsuarios/api/: AsyncSocket.c  AsyncSocket.h  AsyncSocketServlet.c  AsyncSocketServlet.h  BaseObjectResources.c  BaseObjectResources.h  BaseResource.c  BaseResource.h  CorsResponseFilter.c  DateParameterConverter.c  ExtendedObjectResources.c  MediaFilter.c  ResourcesErrorHandler.c  SimpleObjectResources.c
MSUsuarios/api/resources/: AttributeResource.c  CalendarResources.c  CommandrResources.c  DeviceResources.c  DriverResources.c  EventResources.c  GeofenceResources.c  GroupResources.c  MaintenanceResources.c  NotificationResources.c  OrderResources.c  PasswordResources.c  PermissionResources.c  PositionResources.c  ReportResources.c  ServerResources.c  SessionResources.c  StatiscticsResources.c  UserResources.c
MSUsuarios/api/security/: CodeRequiredException.c  LoginResult.c  LoginService.c  PermissionsService.c  SecurityRequestFilter.c  ServiceAccountUser.c  UserPrincipal.c  UserSecurityContext.c
MSUsuarios/api/signature/: CryptoManager.c  CryptoManager.h  KeystoreModel.c  KeystoreModel.h  TokenManager.c  TokenManager.h
MSUsuarios/lib/: benchmark.cpp  benchmark2.h
MSUsuarios/public/: createUser.html  login.html
MSUsuarios/session/: ConnectionKey.c  ConnectionKey_test  ConnectionManager.c  DeviceSession.c  DeviceSession.h  connection_manager_test  device_session_test
MSUsuarios/session/cache/: CacheGraph.c  CacheKey.c  CacheManager.c  CacheNode.c  CacheNode.h  WeakValueMap.c  WeakValueMap.h
MSUsuarios/session/state/: MotionProcessor.c  MotionState.h  OverspeedProcessor.c  OverspeedState.h
TraccarMonolitico/: Dockerfile  traccar.xml
init-scripts/: init_tem.sqltem
traccar-web/: Dockerfile  package.json  vite.config.js
